--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "context-server": "*",
     "contextdb": "*",
     "rincewind": "*",
-    "routes-router": "*",
-    "browserify": "*",
+    "become": "*",
+    "former": "*",
+    "dom-behavior": "*",
+    "dom-morph": "*",
+    "micro-css": "*",
     "level": "*",
     "strftime": "*",
     "brfs": "*",
     "become": "*",
-    "micro-css": "*",
     "tree-query": "*",
     "supervisor": "*",
+    "routes-router": "*",
+    "browserify": "*",
     "marked": "~0.2.9"
   },
   "private": true,
